Solve problem with color

--- a/Lab2/app/src/main/res/values-ru/strings.xml
+++ b/Lab2/app/src/main/res/values-ru/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Lab2</string>
+    <string name="app_name">Лабораторная работа 2</string>
     <string name="_0">0</string>
-    <string name="ok">OK</string>
+    <string name="ok">ОК</string>
 </resources>
