--- a/Lab2/app/src/main/res/values/strings.xml
+++ b/Lab2/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Lab2</string>
+    <string name="app_name">Laboratory work 2</string>
+    <string name="_0">0</string>
+    <string name="ok">OK</string>
 </resources>
